# Doom-Like-RayCaster

./: CMakeLists.txt  README.md
assets/: map.txt
assets/maps/: map.txt  map2.txt
include/: color.h  globals.h  imageloader.h  player.h  raycaster.h  soundplayer.h  text_renderer.h  waiter.h
src/: main.cpp
